# EAP-IG

./: pyproject.toml
eap/: attribute.py  attribute_node.py  evaluate.py  graph.py  utils.py
